Commiting my first homework results

--- a/1.html
+++ b/1.html
@@ -1,4 +1,8 @@
 <meta charset="utf-8">
 <script>
 	'use strict';
+	let tempCelsius = +prompt("What is the temperature in Celsius?");
+	let tempFahrenheit = (9 / 5) * tempCelsius + 32;
+	
+	alert(`Temperature in Fahrenheit is ${tempFahrenheit}`);
 </script>
