--- a/2.html
+++ b/2.html
@@ -1,10 +1,16 @@
 <meta charset="utf-8">
 <script>
 	'use strict';
-	let admin, name;
-	name = "Василий";
-	admin = name;
-	
-	console.log(admin);
-	// let name = "Василий", admin = name; - укороченный вариант.
+
+	let a = 2;
+	let x = 1 + (a *= 2);
+
+	/*
+        Форма записи a *= 2 соответствует a = a * 2, при этом в переменную а не только записывается новое
+        значение, это значение так же возвращается. Тогда нашу пятую строку можно представить как
+        let x = 1 + (a * 2)
+        Откуда мы получим 5. Естественно, в а тоже записалось новое значение 4.
+	 */
+
+	console.log(x, a);
 </script>
