--- a/3.html
+++ b/3.html
@@ -1,12 +1,15 @@
 <meta charset="utf-8">
 <script>
-	console.log(10 + 10 + "10"); //2010, т.к. внутри скобок приоритеты равны идем слева направо,
-	// сперва сложение затем конкатенация.
-	console.log(10 + "10" + 10); //101010, соответственно здесь две конкатенации.
-	console.log(10 + 10 + +"10"); //30, т.к. унарный плюс возвращает значение числа,
-	// поэтому string 10 преобразуется в number
-	console.log(10 / -""); //-Infinity, т.к. унарный плюс возвращает отрицательное значение числа,
-	// поэтому string "" будет преобразован в -0, а при делении на 0 мы получаем бесконечность.
-	console.log(10 / +"2,5"); //NaN, т.к. унарный плюс не сможет привести string "2,5" к числу,
-	// т.к. в числах используются точки, а не запятые.
+    'use script';
+
+    let a = (Math.random() * 100) - 50; // Получим значения [-50; 49]
+    let b = (Math.random() * 100) - 50; // Получим значения [-50; 49]
+
+    if (a >= 0 && b >= 0) {
+        console.log(a - b);
+    } else if (a < 0 && b < 0) {
+        console.log(a * b);
+    } else {
+        console.log(a + b);
+    }
 </script>
