--- a/4.html
+++ b/4.html
@@ -1,15 +1,15 @@
 <meta charset="utf-8">
 <script>
-	/*
-		Async
-		Атрибут async означает, что файл может быть подгружен асинхронно с парсингом HTML документа,
-		но как только он подгрузится, парсинг приостановится и начнется исполнение js файла. Если
-		мы будем подгружать несколько файлов асинхронно, первым выполнится тот, который загрусится раньше остальных.
-		
-		Defer
-		Атрибут defer имеет несколько отличий от async. Во-первых файлы которые мы будем подгружать таким
-		образом исполнятся только после после того как весь HTML-документ будет обработан браузером.
-		Во-вторых относительный порядок скриптов будет сохранен, то есть скрипты будут выполняться в том
-		порядке, в каком мы их указали.
-	*/
+	'use script';
+
+	//Т.к. используется function expression, пришлось оставить функции сверху
+	const add = (a, b) => a + b;
+	const subtract = (a, b) => a - b;
+	const multiply = (a, b) => a * b;
+	const divide = (a, b) => a / b;
+
+    console.log(add(1, 2));
+    console.log(subtract(3, 4));
+    console.log(multiply(5, 6));
+    console.log(divide(7, 8));
 </script>
