--- a/4.html
+++ b/4.html
@@ -2,14 +2,25 @@
 <script>
 	'use script';
 
-	//Т.к. используется function expression, пришлось оставить функции сверху
-	const add = (a, b) => a + b;
-	const subtract = (a, b) => a - b;
-	const multiply = (a, b) => a * b;
-	const divide = (a, b) => a / b;
+	for (let i = 0; i <= 100; i++) {
+	    if (isPrime(i)) {
+	        console.log(i);
+        }
+    }
 
-    console.log(add(1, 2));
-    console.log(subtract(3, 4));
-    console.log(multiply(5, 6));
-    console.log(divide(7, 8));
+    /**
+     * Checks if a number is prime
+     * @param number - Number that is going to be checked
+     * @returns {boolean}
+     */
+    function isPrime(number) {
+	    if (number > 1) {
+	        for (let i = 2; i < number; i++) {
+	            if (number % i === 0) {
+	                return false;
+                }
+            }
+            return true;
+        }
+    }
 </script>
