--- a/1.html
+++ b/1.html
@@ -1,28 +1,16 @@
 <meta charset="utf-8">
 <script>
-	'use strict';
+    'use strict';
 
-	let a = 1, b = 1, c, d;
-
-	/*
-        Вообще ++a и a++ это разные записи инкременты, которая в полном виде расписывается как
-        a = a + 1;
-        ++a - Преинкремента, a++ - Постинкремента, различаются они только возвзращаемым значением.
-        Так, преинкремента возвращает уже инкрементированное значение, постинкремента же возвращает значение a.
-	 */
-
-	c = ++a;
-	alert(c); // 2, т.к. преинкремента вернет a + 1, т.е. 1 + 1
-
-    d = b++;
-    alert(b); // 1, т.к. постинкремента вернет b, т.е. 1
-
-    c = 2 + ++a;
-    alert(c); // 5, т.к. преинкремента вернет a + 1, т.е. 2 + 1
-
-    d = 2 + b++;
-    alert(d); // 4, т.к. постинкремента вернет b, т.е. 2
-
-    alert(a); // 3, естественно, все это время наши значение инкрементировались
-    alert(b); // 3
+    let i = 0;
+    do {
+        if (i === 0) {
+            console.log(`${i} - this is zero`);
+        } else if (i % 2 === 0) {
+            console.log(`${i} - this is an even number`);
+        } else {
+            console.log(`${i} - this is an odd number`);
+        }
+        i++;
+    } while (i < 11);
 </script>
