--- a/5.html
+++ b/5.html
@@ -2,70 +2,53 @@
 <script>
 	'use strict';
 
-	console.log(mathOperation(10, 15, '+'));
-	console.log(mathOperation(29, 85, '-'));
-	console.log(mathOperation(17, -5, '*'));
-	console.log(mathOperation(21, 5, '/'));
+	const arr = [
+	    [2, -4, 6],
+        [1, -5, 10],
+        [7, -4, 1]
+    ];
 
-    /**
-     * Perform a mathematical operation
-     * @param {number} arg1 - First operand
-     * @param {number} arg2 - Second operand
-     * @param {string} operation - Mathematical operation
-     * @returns {number}
-     */
-	function mathOperation(arg1, arg2, operation) {
-	    switch(operation) {
-            case('+'):
-                return add(arg1, arg2);
-            case('-'):
-                return subtract(arg1, arg2);
-            case('*'):
-                return multiply(arg1, arg2);
-            case('/'):
-                return divide(arg1, arg2);
-            default:
-                console.log()
+	let indexOfMaxArray = 0;
+	let maxSum = getSum(arr[0]);
+
+	for (let i = 1; i < arr.length; i++) {
+	    if (maxSum < getSum(arr[i])) {
+	        indexOfMaxArray = i;
         }
     }
 
-    /**
-     * Performs mathematical addition
-     * @param {number} a - First operand
-     * @param {number} b - Second operand
-     * @returns {number}
-     */
-	function add(a, b) {
-	    return a + b;
-    }
+    console.log(indexOfMaxArray);
+    console.log(getSmallest(arr[indexOfMaxArray]));
 
     /**
-     * Performs mathematical subtraction
-     * @param {number} a - First operand
-     * @param {number} b - Second operand
+     * Returns the sum of the array elements
+     * @param array - Array that we are going to go through
      * @returns {number}
      */
-    function subtract(a, b) {
-	    return a - b;
+    function getSum(array) {
+	    let sum = 0;
+
+	    for (let i of array) {
+	        sum += i;
+        }
+
+        return sum;
     }
 
-        /**
-     * Performs mathematical multiplication
-     * @param {number} a - First operand
-     * @param {number} b - Second operand
+    /**
+     * Returns the smallest element of the array
+     * @param array - Array that we are going to go through
      * @returns {number}
      */
-    function multiply(a, b) {
-	    return a * b;
-    }
+    function getSmallest(array) {
+        let min = array[0];
 
-        /**
-     * Performs mathematical division
-     * @param {number} a - First operand
-     * @param {number} b - Second operand
-     * @returns {number}
-     */
-    function divide(a, b) {
-	    return (a / b).toFixed(2);
+        for (let i of array) {
+            if (min > i) {
+                min = i;
+            }
+        }
+
+        return min;
     }
 </script>
