--- a/1.html
+++ b/1.html
@@ -1,16 +1,83 @@
-<meta charset="utf-8">
-<script>
-    'use strict';
-
-    let i = 0;
-    do {
-        if (i === 0) {
-            console.log(`${i} - this is zero`);
-        } else if (i % 2 === 0) {
-            console.log(`${i} - this is an even number`);
-        } else {
-            console.log(`${i} - this is an odd number`);
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
         }
-        i++;
-    } while (i < 11);
-</script>
+
+        html {
+            height: 100%;
+            font-size: 40px;
+        }
+        body {
+            display: flex;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+        }
+        table {
+            border-spacing: 0;
+            border-collapse: collapse;
+        }
+        td {
+            text-align: center;
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            background-color: #EFEFEF;
+        }
+    </style>
+</head>
+<body>
+    <table>
+    </table>
+    <script>
+        'use strict';
+
+        let board = {
+            width: 10,
+            height: 10,
+            init() {
+                const table = document.querySelector('table');
+                for (let i = 0; i < this.width; i++) {
+                    const trElement = document.createElement('tr');
+                    table.appendChild(trElement);
+                    for (let j = 0; j < board.height; j++) {
+                        const tdElement = document.createElement('td');
+                        trElement.appendChild(tdElement);
+                        if (this.shouldColorize(i, j)) {
+                            this.colorize(tdElement);
+                        }
+                        if ((j === 0 || j === this.width - 1) && (i > 0 && i < this.width - 1)) {
+                            tdElement.textContent = `${9 - i}`;
+                        }
+                        if ((i === 0 || i === this.height - 1) && (j > 0 && j < this.height - 1)) {
+                            console.log("LOL");
+                            tdElement.textContent = String.fromCharCode(96 + j);
+                        }
+                    }
+                }
+            },
+            shouldColorize(row, line) {
+                return row > 0 &&
+                    row < this.height - 1 &&
+                    line > 0 &&
+                    line < this.width - 1 &&
+                    (line + row) % 2 === 1
+            },
+            colorize(tableCell) {
+                tableCell.style.backgroundColor = 'black';
+            }
+        };
+        console.log(board.width);
+        board.init();
+    </script>
+</body>
+</html>
